Add horizontal rule

--- a/README.org
+++ b/README.org
@@ -26,6 +26,9 @@
 ** TODO footnote-reference
 ** TODO headline
 ** TODO horizontal-rule
+*** DONE Basic Implementation
+    CLOSED: [2021-01-07 Thu 10:22]
+*** TODO Add labelling
 ** DONE inline-src-block
    CLOSED: [2021-01-07 Thu 08:45]
 ** TODO inlinetask
