--- a/test.org
+++ b/test.org
@@ -94,28 +94,31 @@
     4 f\left(x_0 + \left(i + \frac{1}{2}\right) H\right) +
     f\left(x_0 + \left(i + 1\right) H\right)}\]
     
-    #+BEGIN_SRC python :results output :exports both
-    from math import pi, sin, log
-    num_points = 10000
-    xmin = 0
-    xmax = pi/2
-    def f(x):
-        if x == 0:
-            return 0
-        return log(sin(x)/x)
-    H = (xmax - xmin) / num_points
-    def s(x0, i, H, f):
-        return H/6 * (
-            f(x0 + i * H) 
-            + 4 * f(x0 + (i + 1/2) * H) 
-            + f(x0 + (i + 1) * H)
-        ) 
-    print(sum(s(xmin, i, H, f) for i in range(num_points)))
-    #+END_SRC
-    
-    #+RESULTS:
-    : -0.2273057071559435
- 
+    #+begin_src python :results file :exports both
+      import matplotlib.pyplot as plt
+      import numpy as np
+      x, y = np.meshgrid(np.linspace(0, 1, 25), np.linspace(0, 1, 25))
+      def slope(x, y):
+          return x - y**2
+      u = np.ones_like(x)
+      v = slope(x, y)
+      plt.figure(figsize=(8, 8))
+      plt.quiver(x, y, u, v, scale=30)
+      plt.gcf().tight_layout()
+      plt.plot(
+          np.linspace(0, 1, 11),
+          [0.000, 0.005, 0.020, 0.045, 0.080, 0.124,
+           0.177, 0.238, 0.306, 0.380, 0.458]
+      )
+      plt.savefig("temp.pdf")
+      return "temp.pdf"
+
+    #+end_src
+
+    #+CAPTION: Quiver Plot
+    #+results:
+    [[file:temp.pdf]]
+
 ** Sample Subheading
    - Item
      
